--- a/index.html
+++ b/index.html
@@ -8,151 +8,190 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>HW-02</title>
+    <title>HW-03</title>
   </head>
   <body>
-    <header>
-      <nav class="header-nav">
-        <a href="/WebStudio" class="logo">
-          <span class="first-part">Web</span>
-          <span class="last-part">Studio</span>
-        </a>
-        <ul class="nav-list list">
-          <li class="header-nav-item">
-            <a href="./index.html" class="header-nav-link ref-color">Студія</a>
-          </li>
-          <li class="header-nav-item">
-            <a href="./portfolio.html" class="header-nav-link">Портфоліо</a>
-          </li>
-          <li class="header-nav-item">
-            <a href="/Контакти" class="header-nav-link">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="list">
-        <li>
-          <a class="header-mail-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="header-tel-link link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
-    </header>
-
-    <main>
-      <section class="hero-sec">
-        <h1 class="hero">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-btn" type="button">Замовити послугу</button>
-      </section>
-
-      <section>
-        <h2 hidden>Особливості</h2>
+    <header class="line">
+      <div class="header-container container">
+        <nav class="header-nav">
+          <a href="/WebStudio" class="logo">
+            <span class="first-part">Web</span>
+            <span class="last-part">Studio</span>
+          </a>
+          <ul class="nav-list list">
+            <li class="header-nav-item">
+              <a href="./index.html" class="header-nav-link ref-color"
+                >Студія</a
+              >
+            </li>
+            <li class="header-nav-item">
+              <a href="./portfolio.html" class="header-nav-link">Портфоліо</a>
+            </li>
+            <li class="header-nav-item">
+              <a href="/Контакти" class="header-nav-link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="list">
           <li>
-            <h3 class="specifics-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="specifics-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="specifics-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="specifics-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="specifics-title">ПЛАНУВАННЯ</h3>
-            <p class="specifics-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="specifics-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="specifics-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
-
-      <section>
-        <h2 class="title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="img/img_1.jpg"
-              alt="клавіатура"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img src="img/img_2.jpg" alt="телефон" width="370" height="294" />
-          </li>
-          <li>
-            <img src="img/img_3.jpg" alt="планшет" width="370" height="294" />
-          </li>
-        </ul>
-      </section>
-
-      <section>
-        <h2 class="title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="img/img_1_1.jpg" alt="Ігор" width="270" height="260" />
-            <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li>
-            <img src="img/img_1_2.jpg" alt="Ольга" width="270" height="260" />
-            <h3 class="team-name">Ольга Рєпіна</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="img/img_1_3.jpg" alt="Микола" width="270" height="260" />
-            <h3 class="team-name">Микола Тарасов</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li>
-            <img src="img/img_1_4.jpg" alt="Михайло" width="270" height="260" />
-            <h3 class="team-name">Михайло Єрмаков</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer-title">
-      <a href="/WebStudio" class="logo">
-        <span class="first-part">Web</span>
-        <span class="footer-last-part">Studio</span>
-      </a>
-      <address class="footer-title-adr">
-        <ul class="list">
-          <li>
-            <a class="footer-adress link" href="м.Київ,пр-тЛесіУкраїнки,26"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a class="footer-mail-link link" href="mailto:info@devstudio.com"
+            <a class="header-mail-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="footer-tel-link link" href="tel:+380961111111"
+            <a class="header-tel-link link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero-sec section">
+        <div class="container">
+          <h1 class="hero">
+            Ефективні рішення для <br />
+            вашого бізнесу
+          </h1>
+          <button class="hero-btn" type="button">Замовити послугу</button>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <h2 hidden>Особливості</h2>
+          <ul class="specifics list">
+            <li class="item">
+              <h3 class="specifics-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="specifics-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="specifics-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="specifics-text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="specifics-title">ПЛАНУВАННЯ</h3>
+              <p class="specifics-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="specifics-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="specifics-text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <h2 class="title">Чим ми займаємося</h2>
+          <ul class="work list">
+            <li class="item">
+              <img
+                src="img/img_1.jpg"
+                alt="клавіатура"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="item">
+              <img src="img/img_2.jpg" alt="телефон" width="370" height="294" />
+            </li>
+            <li class="item">
+              <img src="img/img_3.jpg" alt="планшет" width="370" height="294" />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="team-section-back section">
+        <div class="container">
+          <h2 class="title">Наша команда</h2>
+          <ul class="work list">
+            <li class="item">
+              <img src="img/img_1_1.jpg" alt="Ігор" width="270" height="260" />
+              <div class="team-sec">
+                <h3 class="team-name">Ігор Дем'яненко</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img src="img/img_1_2.jpg" alt="Ольга" width="270" height="260" />
+              <div class="team-sec">
+                <h3 class="team-name">Ольга Рєпіна</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="img/img_1_3.jpg"
+                alt="Микола"
+                width="270"
+                height="260"
+              />
+              <div class="team-sec">
+                <h3 class="team-name">Микола Тарасов</h3>
+                <p class="team-position">Marketing</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="img/img_1_4.jpg"
+                alt="Михайло"
+                width="270"
+                height="260"
+              />
+              <div class="team-sec">
+                <h3 class="team-name">Михайло Єрмаков</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer-title">
+      <div class="container">
+        <a href="/WebStudio" class="logo">
+          <span class="first-part">Web</span>
+          <span class="footer-last-part">Studio</span>
+        </a>
+        <address class="footer-title-adr">
+          <ul class="footer-list">
+            <li>
+              <a class="footer-adress link" href="м.Київ,пр-тЛесіУкраїнки,26"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a class="footer-mail-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-tel-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
