--- a/portfolio.html
+++ b/portfolio.html
@@ -8,160 +8,233 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>portfolio</title>
   </head>
   <body>
-    <header>
-      <nav class="header-nav">
-        <a href="/WebStudio" class="logo">
-          <span class="first-part">Web</span>
-          <span class="last-part">Studio</span>
-        </a>
-        <ul class="nav-list list">
-          <li class="header-nav-item">
-            <a href="./index.html" class="header-nav-link">Студія</a>
-          </li>
-          <li class="header-nav-item">
-            <a href="./portfolio.html" class="header-nav-link ref-color"
-              >Портфоліо</a
-            >
-          </li>
-          <li class="header-nav-item">
-            <a href="/Контакти" class="header-nav-link">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="list">
-        <li>
-          <a class="header-mail-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="header-tel-link link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
-    </header>
-
-    <main>
-      <section>
-        <h1 hidden class="title">Наші роботи</h1>
+    <header class="line">
+      <div class="header-container container">
+        <nav class="header-nav">
+          <a href="/WebStudio" class="logo">
+            <span class="first-part">Web</span>
+            <span class="last-part">Studio</span>
+          </a>
+          <ul class="nav-list list">
+            <li class="header-nav-item">
+              <a href="./index.html" class="header-nav-link">Студія</a>
+            </li>
+            <li class="header-nav-item">
+              <a href="./portfolio.html" class="header-nav-link ref-color"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="header-nav-item">
+              <a href="/Контакти" class="header-nav-link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="list">
           <li>
-            <button class="portfolio-btn" type="button">Усі</button>
-          </li>
-          <li>
-            <button class="portfolio-btn" type="button">Веб-сайти</button>
-          </li>
-          <li>
-            <button class="portfolio-btn" type="button">Додатки</button>
-          </li>
-          <li>
-            <button class="portfolio-btn" type="button">Дизайн</button>
-          </li>
-          <li>
-            <button class="portfolio-btn" type="button">Маркетинг</button>
-          </li>
-        </ul>
-
-        <ul class="list">
-          <li>
-            <a href="">
-              <img src="img/img_2_1.jpg" alt="Комп" width="370" height="294" />
-              <h2 class="work-name">Технокряк</h2>
-              <p class="work-description">Веб-сайт</p>
-            </a>
-          </li>
-
-          <li>
-            <a href="">
-              <img src="img/img_2_2.jpg" alt="Комп" width="370" height="294" />
-              <h2 class="work-name">Постер New Orlean vs Golden Star</h2>
-              <p class="work-description">Дизайн</p>
-            </a>
-          </li>
-
-          <li>
-            <a href="">
-              <img src="img/img_2_3.jpg" alt="Комп" width="370" height="294" />
-              <h2 class="work-name">Ресторан Seafood</h2>
-              <p class="work-description">Додаток</p>
-            </a>
-          </li>
-
-          <li>
-            <a href="">
-              <img src="img/img_2_4.jpg" alt="Комп" width="370" height="294" />
-              <h2 class="work-name">Проєкт Prime</h2>
-              <p class="work-description">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="img/img_2_5.jpg" alt="Комп" width="370" height="294" />
-              <h2 class="work-name">Проєкт Boxes</h2>
-              <p class="work-description">Додаток</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="img/img_2_6.jpg" alt="Комп" width="370" height="294" />
-              <h2 class="work-name">Inspiration has no Borders</h2>
-              <p class="work-description">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="img/img_2_7.jpg" alt="Комп" width="370" height="294" />
-              <h2 class="work-name">Видання Limited Edition</h2>
-              <p class="work-description">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="img/img_2_8.jpg" alt="Комп" width="370" height="294" />
-              <h2 class="work-name">Inspiration has no Borders</h2>
-              <p class="work-description">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="img/img_2_9.jpg" alt="Комп" width="370" height="294" />
-              <h2 class="work-name">Inspiration has no Borders</h2>
-              <p class="work-description">Додаток</p>
-            </a>
-          </li>
-        </ul>
-      </section>
-    </main>
-
-    <footer class="footer-title">
-      <a href="/WebStudio" class="logo">
-        <span class="first-part">Web</span>
-        <span class="footer-last-part">Studio</span>
-      </a>
-      <address class="footer-title-adr">
-        <ul class="list">
-          <li>
-            <a class="footer-adress link" href="м.Київ,пр-тЛесіУкраїнки,26"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a class="footer-mail-link link" href="mailto:info@devstudio.com"
+            <a class="header-mail-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="footer-tel-link link" href="tel:+380961111111"
+            <a class="header-tel-link link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+
+    <main>
+      <section class="section">
+        <div class="container">
+          <h1 hidden class="title">Наші роботи</h1>
+          <ul class="btn-center list">
+            <li class="btn-width">
+              <button class="portfolio-btn" type="button">Усі</button>
+            </li>
+            <li class="btn-width">
+              <button class="portfolio-btn" type="button">Веб-сайти</button>
+            </li>
+            <li class="btn-width">
+              <button class="portfolio-btn" type="button">Додатки</button>
+            </li>
+            <li class="btn-width">
+              <button class="portfolio-btn" type="button">Дизайн</button>
+            </li>
+            <li class="btn-width">
+              <button class="portfolio-btn" type="button">Маркетинг</button>
+            </li>
+          </ul>
+
+          <ul class="portfolio-name list">
+            <li class="portfolio-work">
+              <a href="">
+                <img
+                  src="img/img_2_1.jpg"
+                  alt="Комп"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-examples">
+                  <h2 class="work-name">Технокряк</h2>
+                  <p class="work-description">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-work">
+              <a href="">
+                <img
+                  src="img/img_2_2.jpg"
+                  alt="Комп"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-examples">
+                  <h2 class="work-name">Постер New Orlean vs Golden Star</h2>
+                  <p class="work-description">Дизайн</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-work">
+              <a href="">
+                <img
+                  src="img/img_2_3.jpg"
+                  alt="Комп"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-examples">
+                  <h2 class="work-name">Ресторан Seafood</h2>
+                  <p class="work-description">Додаток</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-work">
+              <a href="">
+                <img
+                  src="img/img_2_4.jpg"
+                  alt="Комп"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-examples">
+                  <h2 class="work-name">Проєкт Prime</h2>
+                  <p class="work-description">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-work">
+              <a href="">
+                <img
+                  src="img/img_2_5.jpg"
+                  alt="Комп"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-examples">
+                  <h2 class="work-name">Проєкт Boxes</h2>
+                  <p class="work-description">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-work">
+              <a href="">
+                <img
+                  src="img/img_2_6.jpg"
+                  alt="Комп"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-examples">
+                  <h2 class="work-name">Inspiration has no Borders</h2>
+                  <p class="work-description">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-work">
+              <a href="">
+                <img
+                  src="img/img_2_7.jpg"
+                  alt="Комп"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-examples">
+                  <h2 class="work-name">Видання Limited Edition</h2>
+                  <p class="work-description">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-work">
+              <a href="">
+                <img
+                  src="img/img_2_8.jpg"
+                  alt="Комп"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-examples">
+                  <h2 class="work-name">Inspiration has no Borders</h2>
+                  <p class="work-description">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-work">
+              <a href="">
+                <img
+                  src="img/img_2_9.jpg"
+                  alt="Комп"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-examples">
+                  <h2 class="work-name">Inspiration has no Borders</h2>
+                  <p class="work-description">Додаток</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer-title">
+      <div class="container">
+        <a href="/WebStudio" class="logo">
+          <span class="first-part">Web</span>
+          <span class="footer-last-part">Studio</span>
+        </a>
+        <address class="footer-title-adr">
+          <ul class="footer-list">
+            <li>
+              <a class="footer-adress link" href="м.Київ,пр-тЛесіУкраїнки,26"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a class="footer-mail-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-tel-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
